--- a/pages/3067.html
+++ b/pages/3067.html
@@ -316,7 +316,11 @@ margin-left: 0em;
 
 <p>A pseudomonoid in the <a class='existingWikiWord' href='/nlab/show/cartesian+monoidal+category'>cartesian</a> monoidal 2-category <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> is precisely a <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a>. The general definition can be extracted from this special case in a straightforward way. The precise definition can be found in Section 3 of the paper of Day and Street referenced below.</p>
 
-<p>Just as a monoid in a monoidal category <math class='maruku-mathml' display='inline' id='mathml_05fa94cb7ceffa682c32903c8e266d8b40d64ce6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can be equivalently defined as a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_05fa94cb7ceffa682c32903c8e266d8b40d64ce6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/delooping'>delooping</a> of <math class='maruku-mathml' display='inline' id='mathml_05fa94cb7ceffa682c32903c8e266d8b40d64ce6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>), so a pseudomonoid in a monoidal 2-category <math class='maruku-mathml' display='inline' id='mathml_05fa94cb7ceffa682c32903c8e266d8b40d64ce6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can equivalently be defined as a <a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <math class='maruku-mathml' display='inline' id='mathml_05fa94cb7ceffa682c32903c8e266d8b40d64ce6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math>.</p>
+<p>Just as a monoid in a monoidal category <math class='maruku-mathml' display='inline' id='mathml_b56c87d6994b86a08629c958894712cde45bdc60_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can be equivalently defined as a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_b56c87d6994b86a08629c958894712cde45bdc60_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/delooping'>delooping</a> of <math class='maruku-mathml' display='inline' id='mathml_b56c87d6994b86a08629c958894712cde45bdc60_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>), so a pseudomonoid in a monoidal 2-category <math class='maruku-mathml' display='inline' id='mathml_b56c87d6994b86a08629c958894712cde45bdc60_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can equivalently be defined as a <a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <math class='maruku-mathml' display='inline' id='mathml_b56c87d6994b86a08629c958894712cde45bdc60_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math>.</p>
+
+<h1 id='variations'>Variations</h1>
+
+<p>A <strong>map pseudomonoid</strong> is a pseudomonoid whose multiplication and unit are <a class='existingWikiWord' href='/nlab/show/bicategory+of+maps'>maps</a>, i.e. <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoints</a>. This is a more appropriate notion for monoidal bicategories whose morphisms are <a class='existingWikiWord' href='/nlab/show/profunctor'>profunctors</a>, since maps therein can be identified (modulo <a class='existingWikiWord' href='/nlab/show/Cauchy+complete+category'>Cauchy completion</a>) with <a class='existingWikiWord' href='/nlab/show/functor'>functors</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -328,18 +332,20 @@ margin-left: 0em;
  
  
  
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November  7, 2016 01:51:34 
-  by <a class="existingWikiWord" href="/nlab/show/Jon+Beardsley">Jon Beardsley</a>
-  (71.35.171.182)
+  Revised on October 10, 2017 17:12:17 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pseudomonoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pseudomonoid/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/pseudomonoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pseudomonoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pseudomonoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pseudomonoid/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/pseudomonoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pseudomonoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
