--- a/pages/8731.html
+++ b/pages/8731.html
@@ -755,10 +755,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<p>A <em>sylleptic monoidal 2-category</em> is a <a class='existingWikiWord' href='/nlab/show/monoidal+bicategory'>monoidal 2-category</a> whose <a class='existingWikiWord' href='/nlab/show/En-algebra'>E1-algebra</a> structure is refined to an <a class='existingWikiWord' href='/nlab/show/En-algebra'>E3-algebra</a> structure.</p>
+<p>A <em>sylleptic monoidal (weak) 2-category</em> is a <a class='existingWikiWord' href='/nlab/show/monoidal+bicategory'>monoidal 2-category</a> with a categorified sort of “commutativity” that lies in between a <a class='existingWikiWord' href='/nlab/show/braided+monoidal+2-category'>braiding</a> and a <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+2-category'>symmetry</a>.</p>
+
+<p>That is, it is a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_b1e91cabaef0c497c8050d3c562b0f2bb59fda3e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> equipped with a <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> <math class='maruku-mathml' display='inline' id='mathml_b1e91cabaef0c497c8050d3c562b0f2bb59fda3e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>:</mo><mi>C</mi><mo>×</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>\otimes : C \times C \to C</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a> which satisfies the first two in a hierarchy of conditions for being commutative up to equivalence. In the language of <a class='existingWikiWord' href='/nlab/show/k-tuply+monoidal+n-category'>k-tuply monoidal n-categories</a>, a braided monoidal 2-category is a <em>triply monoidal 2-category</em>. As described there, this may be identified with a pointed 5-category with a single <math class='maruku-mathml' display='inline' id='mathml_b1e91cabaef0c497c8050d3c562b0f2bb59fda3e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-morphism for <math class='maruku-mathml' display='inline' id='mathml_b1e91cabaef0c497c8050d3c562b0f2bb59fda3e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>k=0,1,2</annotation></semantics></math>. We can also say that it is a monoidal 2-category whose <a class='existingWikiWord' href='/nlab/show/En-algebra'>E1-algebra</a> structure is refined to an <a class='existingWikiWord' href='/nlab/show/En-algebra'>E3-algebra</a> structure.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -793,14 +795,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  8, 2013 22:26:41 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.99.18)
+  Revised on October 10, 2017 17:05:46 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sylleptic+monoidal+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sylleptic+monoidal+2-category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/sylleptic+monoidal+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sylleptic+monoidal+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/sylleptic+monoidal+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sylleptic+monoidal+2-category/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/sylleptic+monoidal+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sylleptic+monoidal+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
