--- a/pages/9612.html
+++ b/pages/9612.html
@@ -312,11 +312,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In the original use of the term, a <em>map</em> or <em>mapping</em> is just a <em><a class='existingWikiWord' href='/nlab/show/function'>function</a></em> (between <a class='existingWikiWord' href='/nlab/show/set'>sets</a>).</p>
+<p>In the original use of the term, a <em>map</em> or <em>mapping</em> is just a <em><a class='existingWikiWord' href='/nlab/show/function'>function</a></em> (between <a class='existingWikiWord' href='/nlab/show/set'>sets</a>). The term is often used for <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous functions</a> between <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> and indeed also generally for any <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a> in any <a class='existingWikiWord' href='/nlab/show/category'>category</a>. Accordingly, for instance the term <em><a class='existingWikiWord' href='/nlab/show/internal+hom'>mapping space</a></em> is often used synonymously for <em><a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom</a></em>.</p>
 
-<p>The term is often used for <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous functions</a> between <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> and indeed also generally for any <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a> in any <a class='existingWikiWord' href='/nlab/show/category'>category</a>.</p>
-
-<p>Accordingly, for instance the term <em><a class='existingWikiWord' href='/nlab/show/internal+hom'>mapping space</a></em> is often used synonymously for <em><a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom</a></em>.</p>
+<p>However, in the <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> literature one should be aware of a different usage; see <a class='existingWikiWord' href='/nlab/show/bicategory+of+maps'>bicategory of maps</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -336,14 +334,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 18, 2013 00:04:00 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.53.152)
+  Revised on October 10, 2017 17:10:48 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/map/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/map/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
