--- a/pages/5989.html
+++ b/pages/5989.html
@@ -342,6 +342,8 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Notes on simplicial homotopy theory</em>, CRM Barcelona, Jan 2008 <a href='http://www.crm.cat/HigherCategories/tierney.pdf'>pdf</a>, <a href='http://mat.uab.cat/~kock/crm/hocat/advanced-course/Quadern47.pdf'>backup pdf</a></p>
 </li>
+
+<li></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -353,14 +355,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2017 06:32:35 
-  by <span class="newWikiWord">ottos mops<a href="/nlab/new/ottos+mops">?</a></span>
-  (217.51.21.150)
+  Revised on October 11, 2017 07:06:48 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.148.226.185)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
