--- a/pages/4800.html
+++ b/pages/4800.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <h2 id='idea'>Idea</h2>
 
-<p>Invariance under <a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge transformation</a>s. See there for details.</p>
+<p><a class='existingWikiWord' href='/nlab/show/invariant'>Invariance</a> under <a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge transformation</a>s. See there for details.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -320,17 +320,20 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on August 25, 2014 01:03:53 
+  Revised on October 11, 2017 09:28:01 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.98.69)
+  (130.60.188.152)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gauge+invariance" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+invariance/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/gauge+invariance" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+invariance" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gauge+invariance" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+invariance/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/gauge+invariance" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+invariance" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
