--- a/pages/5989.html
+++ b/pages/5989.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Myles Tierney was a Rutgers faculty member for thirty-four years, coming to Rutgers as an Associate Professor in 1968 following positions at Rice University (1965-6) and at the ETH-Forschungsinstitut fr Mathematics, Zrich (1966-68). He received his B.A. from Brown University in 1959 and his Ph.D. from Columbia in 1965.</p>
+    <p>Myles Tierney was a Rutgers faculty member for thirty-four years, coming to Rutgers as an Associate Professor in 1968 following positions at Rice University (1965-6) and at the ETH-Forschungsinstitut für Mathematik, Zürich (1966-68). He received his B.A. from Brown University in 1959 and his Ph.D. from Columbia in 1965.</p>
 
 <p>Myles began his career as an <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topologist</a>, moved toward <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and was responsible (together with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F.W. Lawvere</a>) for the introduction of a new field within category theory: <a class='existingWikiWord' href='/nlab/show/topos'>elementary topoi</a>.</p>
 
@@ -318,32 +318,30 @@ margin-left: 0em;
 <p>(Taken from <a href='http://www.math.rutgers.edu/newsletter/newsletter2003.html'>this website</a>)</p>
 </blockquote>
 
-<p>Myles Tierney died on October 6, 2017 having turned 80 in September. He made important contributions to category theory in collaboration with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Bill Lawvere</a> and with <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a>.</p>
+<p>Myles Tierney died on October 6, 2017 having turned 80 in September. He made important contributions to category theory in collaboration with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Bill Lawvere</a> and with <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>.</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>An Extension of the Galois Theory of Grothendieck</em>, Memoirs of the American Mathematical Society 51 (1984).</p>
+<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>An Extension of the Galois Theory of Grothendieck</em>, Memoirs of the American Mathematical Society 51 (1984).</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Strong stacks and classifying spaces</em>, Category theory (Como, 1990), 213236, Lecture Notes in Math. <strong>1488</strong>, Springer 1991.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Strong stacks and classifying spaces</em>, Category theory (Como, 1990), 213–236, Lecture Notes in Math. <strong>1488</strong>, Springer 1991.</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>On the theory of path groupoids</em>, J. Pure Appl. Algebra <strong>149</strong> (2000), no. 1, 69100, <a href='http://dx.doi.org/10.1016/S0022-4049%2898%2900164-9'>doi</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>On the theory of path groupoids</em>, J. Pure Appl. Algebra <strong>149</strong> (2000), no. 1, 69–100, <a href='http://dx.doi.org/10.1016/S0022-4049%2898%2900164-9'>doi</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Quasi-categories vs Segal spaces</em> (<a href='http://arxiv.org/abs/math/0607820'>arXiv:0607820</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Quasi-categories vs Segal spaces</em> (<a href='http://arxiv.org/abs/math/0607820'>arXiv:0607820</a>)</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>Andr Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Notes on simplicial homotopy theory</em>, CRM Barcelona, Jan 2008 <a href='http://www.crm.cat/HigherCategories/tierney.pdf'>pdf</a>, <a href='http://mat.uab.cat/~kock/crm/hocat/advanced-course/Quadern47.pdf'>backup pdf</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> and <a class='existingWikiWord' href='/nlab/show/Myles+Tierney'>Myles Tierney</a>, <em>Notes on simplicial homotopy theory</em>, CRM Barcelona, Jan 2008 <a href='http://www.crm.cat/HigherCategories/tierney.pdf'>pdf</a>, <a href='http://mat.uab.cat/~kock/crm/hocat/advanced-course/Quadern47.pdf'>backup pdf</a></p>
 </li>
-
-<li></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -355,14 +353,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2017 07:06:48 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.148.226.185)
+  Revised on October 11, 2017 11:31:18 
+  by <span class="newWikiWord">ottos mops<a href="/nlab/new/ottos+mops">?</a></span>
+  (217.51.21.150)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
