--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,57 +308,66 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='num_example' id='LocalBVComplexOfVacuumElectromagnetismOnMinkowskiSpacetime'>
-<h6 id='example'>Example</h6>
-
-<p><strong>(<a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BV-complex</a> of <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a> <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>)</strong></p>
-
-<p>Consider the <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> of <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free</a> <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> (example \ref{ElectromagnetismLagrangianDensity}) with <a class='existingWikiWord' href='/nlab/show/gauge+parameter'>gauge parameter</a> as in example \ref{InfinitesimalGaugeSymmetryElectromagnetism}. With the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> and <a class='existingWikiWord' href='/nlab/show/gauge+parameter'>gauge parameter</a> coordinates as chosen in these examples</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a1861089b8e7debb62ac555d125bc99777487d41_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mo stretchy='false'>(</mo><msub><mi>a</mi> <mi>μ</mi></msub><mo stretchy='false'>)</mo><mo>,</mo><mi>c</mi><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
-  \left(
-    (a_\mu), c
-  \right)
-
-</annotation></semantics></math></div>
-<p>then the <a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BV-BRST complex</a> (prop. \ref{LocalBVBRSTComplexIsDerivedCriticalLocusOfEulerLagrangeForm}) has generators</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a1861089b8e7debb62ac555d125bc99777487d41_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><mover><mi>c</mi><mo>¯</mo></mover></mtd> <mtd><msup><mover><mi>a</mi><mo>¯</mo></mover> <mi>μ</mi></msup></mtd> <mtd><msub><mi>a</mi> <mi>μ</mi></msub></mtd> <mtd><mi>c</mi></mtd></mtr> <mtr><mtd><mi>deg</mi><mo>=</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mtd> <mtd><mn>0</mn></mtd> <mtd><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_19766476d9be6399eb3aa329785aa36c216fb73d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>implicit infinitesimal gauge transformations</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mtext>adjoin ghost fields</mtext></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>dg-Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>explicit infinitesimal gauge transformations</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BRST differential </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><mpadded width='0'><mfrac linethickness='0'><mrow><mtext>pass to</mtext></mrow><mrow><mrow><mi>derived</mi><mi>critical</mi><mi>locus</mi></mrow></mrow></mfrac></mpadded></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>reduced phase space</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BV-BRST differential </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><mpadded width='0'><mfrac linethickness='0'><mrow><mtext>gauge fixing</mtext></mrow><mrow><mtext>quasi-isomorphism</mtext></mrow></mfrac></mpadded></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> decategorified </mtext></mtd></mtr> <mtr><mtd><mtext> reduced covariant phase space </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><munder><mo>⟵</mo><mtext>pass to cohomology</mtext></munder></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> reduced covariant phase space  </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
-    &amp; \overline{c} &amp; \overline{a}^\mu &amp; a_\mu &amp; c
-    \\
-    deg =
-    &amp;
-    -2 &amp; -1 &amp; 0 &amp; 1
+     \left\{
+        \array{
+           \text{Lagrangian field theory with}
+           \\
+           \text{implicit infinitesimal gauge transformations}
+        }
+     \right\}
+     &amp;\overset{\text{adjoin ghost fields}}{\longrightarrow}&amp;
+     \left\{
+        \array{
+           \text{dg-Lagrangian field theory with}
+           \\
+           \text{explicit infinitesimal gauge transformations}
+           \\
+           \text{ embodied by BRST differential }
+        }
+     \right\}
+     \\
+     &amp;&amp; \Big\downarrow\mathrlap{ \text{pass to} \atop {derived critical locus} }
+     \\
+     \left\{
+        \array{
+           \text{reduced phase space}
+           \\
+           \text{ embodied by BV-BRST differential }
+        }
+     \right\}
+     \\
+     \Big\downarrow
+     &amp;&amp; \Big\downarrow\mathrlap{\text{gauge fixing} \atop \text{quasi-isomorphism}}
+     \\
+     \left\{
+       \array{
+         \text{ decategorified }
+         \\
+         \text{ reduced covariant phase space }
+       }
+     \right\}
+     &amp;\underset{\text{pass to cohomology}}{\longleftarrow}&amp;
+     \left\{
+        \array{
+           \text{ reduced covariant phase space  }
+        }
+     \right\}
   }
 
 </annotation></semantics></math></div>
-<p>together with their <a class='existingWikiWord' href='/nlab/show/variational+bicomplex'>total spacetime derivatives</a>, and the local BV-BRST differential <math class='maruku-mathml' display='inline' id='mathml_a1861089b8e7debb62ac555d125bc99777487d41_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math> acts on these generators as follows:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a1861089b8e7debb62ac555d125bc99777487d41_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msup><mover><mi>a</mi><mo>¯</mo></mover> <mi>μ</mi></msup></mtd> <mtd><mo>↦</mo></mtd> <mtd><msubsup><mi>f</mi> <mrow><mo>,</mo><mi>ν</mi></mrow> <mrow><mi>ν</mi><mi>μ</mi></mrow></msubsup></mtd> <mtd><mtext>(equations of Motion -- vacuum Maxwell equations)</mtext></mtd></mtr> <mtr><mtd><mover><mi>c</mi><mo>¯</mo></mover></mtd> <mtd><mo>↦</mo></mtd> <mtd><msubsup><mover><mi>a</mi><mo>¯</mo></mover> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>μ</mi></msubsup></mtd> <mtd><mtext>(Noether identity)</mtext></mtd></mtr> <mtr><mtd><msub><mi>a</mi> <mi>μ</mi></msub></mtd> <mtd><mo>↦</mo></mtd> <mtd><msub><mi>c</mi> <mrow><mo>,</mo><mi>μ</mi></mrow></msub></mtd> <mtd><mtext>(infinitesimal gauge transformation)</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
-  s
-  \;\colon\;
-  \left\{
-  \array{
-    \overline{a}^\mu &amp;\mapsto&amp;  f^{\nu \mu}_{,\nu}  &amp; \text{(equations of Motion -- vacuum Maxwell equations)}
-    \\
-    \overline{c} &amp;\mapsto&amp; \overline{a}^\mu_{,\mu} &amp; \text{(Noether identity)}
-    \\
-    a_\mu &amp;\mapsto&amp; c_{,\mu} &amp; \text{(infinitesimal gauge transformation)}
-  }
-  \right.
-
-</annotation></semantics></math></div></div>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_a1861089b8e7debb62ac555d125bc99777487d41_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>‡</mo></mrow><annotation encoding='application/x-tex'>\ddagger</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 12, 2017 08:37:19 
+  Revised on October 12, 2017 09:59:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1138" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1138 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1139" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1139 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
